still working on structure

--- a/Big Boy Pants.html
+++ b/Big Boy Pants.html
@@ -1,30 +1,32 @@
-<tw-storydata name="Big Boy Pants" startnode="1" creator="Twine" creator-version="2.2.1" ifid="367D5C4B-D7FC-4606-B758-64044FDC5146"
-    zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden>
-    <style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+<tw-storydata name="Big Boy Pants" startnode="2" creator="Twine" creator-version="2.2.1" ifid="367D5C4B-D7FC-4606-B758-64044FDC5146" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
-    </style>
-    <script role="script" id="twine-user-script" type="text/twine-javascript">
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-    </script>
-    <tw-passagedata pid="1" name="Interview Question" tags="" position="104,103" size="100,100">You’re in the interview and are asked why you want the job. What to say? [[Explain why you need easy money. ]] [[Talk
-        about the sense of community they have.]] [[Tell them that you hope to eventually be made assistant manager.]]
-    </tw-passagedata>
-    <tw-passagedata pid="2" name="START" tags="" position="502,1" size="100,100">Today is is your interview at the best fast food restaurant in the county: Big Boys! You had to beg your parents to let
-        you apply, but finally you’re here to prove yourself as a capable employee. The smell of hamburgers and anticipation
-        greets you as you step through the automatic front doors. [[CLICK HERE TI BEGIN]]</tw-passagedata>
-    <tw-passagedata
-        pid="3" name="Explain why you need easy money. " tags="" position="536,289" size="100,100">If you need easy money, this isn&#39;t the job for you...The real money is in credit card scamming right now. [[&quot;I&#39;m
-        listening&quot;]] [[&quot;You&#39;re kidding right?&quot;]] [[*Walk out of interview*]]</tw-passagedata>
-        <tw-passagedata
-            pid="4" name="Talk about the sense of community they have." tags="" position="129,385" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-            <tw-passagedata pid="5" name="Tell them that you hope to eventually be made assistant manager."
-                tags="" position="253,219" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-            <tw-passagedata pid="6" name="CLICK HERE TI BEGIN" tags=""
-                position="715,96" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-            <tw-passagedata pid="7" name="&quot;I&#39;m listening&quot;"
-                tags="" position="522,421" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-            <tw-passagedata pid="8" name="&quot;You&#39;re kidding right?&quot;"
-                tags="" position="663,426" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-            <tw-passagedata pid="9" name="*Walk out of interview*"
-                tags="" position="822,443" size="100,100">Double-click this passage to edit it.</tw-passagedata>
-</tw-storydata>
+</script><tw-passagedata pid="1" name="Interview Question" tags="" position="569,537" size="100,100">You’re in the interview and are asked why you want the job. What to say?
+
+[[Explain why you need easy money. ]]
+
+[[Talk about the sense of community they have.]]
+
+[[Tell them that you hope to eventually be made assistant manager.]]
+</tw-passagedata><tw-passagedata pid="2" name="START" tags="" position="641,13" size="100,100">Today is is your interview at the best fast food restaurant in the county: Big Boys! You had to beg your parents to let you apply, but finally you’re here to prove yourself as a capable employee. The smell of hamburgers and anticipation greets you as you step through the automatic front doors.
+
+
+[[Open the door]]</tw-passagedata><tw-passagedata pid="3" name="Explain why you need easy money. " tags="" position="941,679" size="100,100">If you need easy money, this isn&#39;t the job for you...The real money is in credit card scamming right now.
+
+[[&quot;I&#39;m listening&quot;]]
+[[&quot;You&#39;re kidding right?&quot;]]
+[[*Walk out of interview*]]</tw-passagedata><tw-passagedata pid="4" name="Talk about the sense of community they have." tags="" position="389,707" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="Tell them that you hope to eventually be made assistant manager." tags="" position="630,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="Open the door" tags="" position="705,161" size="100,100">An intimidating woman greets you from behind the counter, 
+
+“Welcome- oh, hey,  you look pretty nervous, kid. You must be the fresh meat I gotta interview today. Go ahead and pop a squat at one of the tables and I’ll be there in a sec’.”
+
+[[Continue-&gt;Pre-Interview Fly Question]]</tw-passagedata><tw-passagedata pid="7" name="&quot;I&#39;m listening&quot;" tags="" position="847,955" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="&quot;You&#39;re kidding right?&quot;" tags="" position="977,960" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="9" name="*Walk out of interview*" tags="" position="1107,977" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Pre-Interview Fly Question" tags="" position="533,259" size="100,100">
+
+You sit down at one of the dining room tables and look around the room as you wait. After a minute goes by you see the employee walk towards you. Your eyes land on her pants’ open fly, and your blood runs cold. What do you do?
+
+[[Tell her-&gt;Jen Laughing Reaction]]
+
+[[Don&#39;t stare-&gt;Jen Knuckles Reaction]]
+
+[[Zip it for her-&gt;Creeped Out Jen, Interview Over]]</tw-passagedata><tw-passagedata pid="11" name="Jen Laughing Reaction" tags="" position="448,400" size="100,100">[[Continue-&gt;Interview Question]]
+</tw-passagedata><tw-passagedata pid="12" name="Jen Knuckles Reaction" tags="" position="663,398" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="13" name="Creeped Out Jen, Interview Over" tags="" position="197,362" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
