--- a/Big Boy Pants.html
+++ b/Big Boy Pants.html
@@ -1,26 +1,40 @@
 <tw-storydata name="Big Boy Pants" startnode="2" creator="Twine" creator-version="2.2.1" ifid="367D5C4B-D7FC-4606-B758-64044FDC5146" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+tw-story {
+ background-image:url("");
+ background-size:cover;
+}
 
+tw-story[tags~="interview"] {
+ background-image:url("http://zagermanjordan.com/digm250/backgrounds/interview.png");
+ background-size:cover;
+}
+
+tw-story[tags~="restaurant"] {
+ background-image:url("http://zagermanjordan.com/digm250/backgrounds/restaurant.png");
+ background-size:cover;
+}
+
+tw-story[tags~="counter"] {
+ background-image:url("http://zagermanjordan.com/digm250/backgrounds/counter.png");
+ background-size:cover;
+}
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-</script><tw-passagedata pid="1" name="Interview Question" tags="" position="569,537" size="100,100">You’re in the interview and are asked why you want the job. What to say?
+</script><tw-passagedata pid="1" name="Interview Question" tags="" position="700,800" size="100,100">Jen: “Let’s start this interview, shall we? So... why do you want the job?” 
 
-[[Explain why you need easy money. ]]
+[[“I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
 
-[[Talk about the sense of community they have.]]
+[[“For the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
 
-[[Tell them that you hope to eventually be made assistant manager.]]
-</tw-passagedata><tw-passagedata pid="2" name="START" tags="" position="641,13" size="100,100">Today is is your interview at the best fast food restaurant in the county: Big Boys! You had to beg your parents to let you apply, but finally you’re here to prove yourself as a capable employee. The smell of hamburgers and anticipation greets you as you step through the automatic front doors.
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]
+</tw-passagedata><tw-passagedata pid="2" name="START" tags="" position="700,0" size="100,100">Today is is your interview at the best fast food restaurant in the county: Big Boys! You had to beg your parents to let you apply, but finally you’re here to prove yourself as a capable employee. The smell of hamburgers and anticipation greets you as you step through the automatic front doors.
 
 
-[[Open the door]]</tw-passagedata><tw-passagedata pid="3" name="Explain why you need easy money. " tags="" position="941,679" size="100,100">If you need easy money, this isn&#39;t the job for you...The real money is in credit card scamming right now.
-
-[[&quot;I&#39;m listening&quot;]]
-[[&quot;You&#39;re kidding right?&quot;]]
-[[*Walk out of interview*]]</tw-passagedata><tw-passagedata pid="4" name="Talk about the sense of community they have." tags="" position="389,707" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="Tell them that you hope to eventually be made assistant manager." tags="" position="630,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="Open the door" tags="" position="705,161" size="100,100">An intimidating woman greets you from behind the counter, 
+[[Open the door]]</tw-passagedata><tw-passagedata pid="3" name="Open the door" tags="restaurant jen" position="700,200" size="100,100">An intimidating woman greets you from behind the counter, 
 
 “Welcome- oh, hey,  you look pretty nervous, kid. You must be the fresh meat I gotta interview today. Go ahead and pop a squat at one of the tables and I’ll be there in a sec’.”
 
-[[Continue-&gt;Pre-Interview Fly Question]]</tw-passagedata><tw-passagedata pid="7" name="&quot;I&#39;m listening&quot;" tags="" position="847,955" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="&quot;You&#39;re kidding right?&quot;" tags="" position="977,960" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="9" name="*Walk out of interview*" tags="" position="1107,977" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Pre-Interview Fly Question" tags="" position="533,259" size="100,100">
+[[Continue-&gt;Pre-Interview Fly Question]]</tw-passagedata><tw-passagedata pid="4" name="Pre-Interview Fly Question" tags="interview jen" position="700,400" size="100,100">
 
 You sit down at one of the dining room tables and look around the room as you wait. After a minute goes by you see the employee walk towards you. Your eyes land on her pants’ open fly, and your blood runs cold. What do you do?
 
@@ -28,5 +42,90 @@ You sit down at one of the dining room tables and look around the room as you wa
 
 [[Don&#39;t stare-&gt;Jen Knuckles Reaction]]
 
-[[Zip it for her-&gt;Creeped Out Jen, Interview Over]]</tw-passagedata><tw-passagedata pid="11" name="Jen Laughing Reaction" tags="" position="448,400" size="100,100">[[Continue-&gt;Interview Question]]
-</tw-passagedata><tw-passagedata pid="12" name="Jen Knuckles Reaction" tags="" position="663,398" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="13" name="Creeped Out Jen, Interview Over" tags="" position="197,362" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+[[Zip it for her-&gt;Creeped Out Jen, Interview Over]]</tw-passagedata><tw-passagedata pid="5" name="Jen Laughing Reaction" tags="" position="600,600" size="100,100">She looks down at her fly and she laughs, “Oh shit, thanks for telling me. My name is Jen, by the way. I’m the assistant manager here.” 
+
+*Jen zips her pants and she sits down in the booth across from you
+
+[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="6" name="Jen Knuckles Reaction" tags="" position="800,600" size="100,100">*She sits down in the booth across from you and she cracks her knuckles.
+
+“Alright, kid, my name is Jen and I’m the assistant manager.”
+
+[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="7" name="Creeped Out Jen, Interview Over" tags="" position="200,500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="“For the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="925,1000" size="100,100">*Jen rolls her eyes.
+“We all want money, kid. Is there anything else?”
+
+[[“Well, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
+
+[[“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
+
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]</tw-passagedata><tw-passagedata pid="9" name="“I want to eventually become assistant manager. My college resume would be dope with that on there!”" tags="" position="700,1000" size="100,100">Jen: “Good answer, though. It shows you have passion and shit- I like that. When can you start?”
+
+[[“Now!”]]
+
+[[“Um…tomorrow?”]]</tw-passagedata><tw-passagedata pid="10" name="“Now!”" tags="" position="600,1600" size="100,100">Jen: “You’re hired! I’ll be keeping a close eye on you, so don’t screw this up. How ‘bout I give you the tour?”
+
+[[Continue-&gt;Scene Skip Counter]]</tw-passagedata><tw-passagedata pid="11" name="“Um…tomorrow?”" tags="" position="800,1600" size="100,100">Double-click this passage to edit it.Jen: “I don’t appreciate slackers, kid. We’re starting now. Follow me- lemme take you on a tour.”
+
+[[Continue-&gt;Scene Skip Counter]]</tw-passagedata><tw-passagedata pid="12" name="“I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="" position="500,1000" size="100,100">*Jen makes a gagging motion with her finger and tongue.
+
+“Try again, kid. That’s the oldest trick in the book and I’ve heard it a billion times from other little tykes like you.”
+
+[[“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
+
+[[“Actually, it&#39;s for the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
+
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]
+</tw-passagedata><tw-passagedata pid="13" name="“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="game-over" position="200,1300" size="100,100">GAME OVER</tw-passagedata><tw-passagedata pid="14" name="“Actually, it&#39;s for the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="500,1200" size="100,100">*Jen rolls her eyes.
+“We all want money, kid. Is there anything else?”
+
+[[“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
+
+[[“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
+
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]</tw-passagedata><tw-passagedata pid="15" name="“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="1200,1300" size="100,100">GAME OVER</tw-passagedata><tw-passagedata pid="16" name="“Well, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="" position="900,1200" size="100,100">*Jen makes a gagging motion with her finger and tongue.
+
+“Try again, kid. That’s the oldest trick in the book and I’ve heard it a billion times from other little tykes like you.”
+
+[[“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
+
+[[“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
+
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]
+</tw-passagedata><tw-passagedata pid="17" name="Scene Skip Counter" tags="" position="700,1800" size="100,100">*Jen leads you behind the counter just as a customer approaches the register. She steps up to greet the person.
+
+Jen: “Hey, dude! It’s been a while….”
+
+*Jen talks with the customer for a minute as she takes his order. She grabs the food from the kitchen window and she shoves it in a bag.
+
+Jen: “Hey, grab a medium coke for me, will ya’?”
+
+[[*You notice there are only Pepsi products available from the soda machine. You fill a cup with Pepsi and hand it to Jen.]]
+
+[[*You grab the bag of coke from your pocket. You’re not sure if she would consider this be a medium portion, but it’ll have to do!]]</tw-passagedata><tw-passagedata pid="18" name="*You notice there are only Pepsi products available from the soda machine. You fill a cup with Pepsi and hand it to Jen." tags="" position="700,2000" size="100,100">Jen: “Cool, thanks…”
+
+*Jen finishes up talking with her friend and she walks him out to his car. As she leaves, another customer approaches the register.
+
+[[Continue-&gt;1st Customer]]</tw-passagedata><tw-passagedata pid="19" name="*You grab the bag of coke from your pocket. You’re not sure if she would consider this be a medium portion, but it’ll have to do!" tags="" position="1200,2000" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="20" name="1st Customer" tags="" position="700,2200" size="100,100">You manage to stutter a greeting to the customer before she goes through her order. It’s a struggle to keep up with her, but somehow you’re able to get everything down without too many questions. 
+
+The time comes for the customer to pay, but you’re not sure how to process the transition. There seems to be three buttons you can choose from.
+
+
+[[Button-&gt;First Button]]
+
+[[Button-&gt;Second Button]]
+
+[[Button-&gt;Third Button]]</tw-passagedata><tw-passagedata pid="21" name="First Button" tags="" position="500,2400" size="100,100">The first button doesn’t seem to do anything for a minute. That’s disappointing.
+
+*Jen walks back inside with a pager device in her hands.
+
+Jen: “You buzzed? What’s up?”
+</tw-passagedata><tw-passagedata pid="22" name="Second Button" tags="" position="900,2400" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="Third Button" tags="" position="700,2400" size="100,100">The third button causes the register to pop open.
+
+You pat yourself on the back for a second before you get an idea- what if you were to press one of the other buttons? What could possibly go wrong?
+
+[[Button-&gt;First Button Third]]
+
+[[Button-&gt;Second Button Third]]
+
+[[Nah, it’s not worth the risk.]]</tw-passagedata><tw-passagedata pid="24" name="First Button Third" tags="" position="500,2600" size="100,100">*Jen walks back inside with a pager device in her hands.
+
+Jen: “You buzzed? What’s up?”</tw-passagedata><tw-passagedata pid="25" name="Second Button Third" tags="" position="900,2600" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="26" name="Nah, it’s not worth the risk." tags="" position="700,2600" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
