--- a/Big Boy Pants.html
+++ b/Big Boy Pants.html
@@ -1,13 +1,23 @@
-<tw-storydata name="Big Boy Pants" startnode="2" creator="Twine" creator-version="2.2.1" ifid="367D5C4B-D7FC-4606-B758-64044FDC5146" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
-tw-story {
- background-image:url("");
- background-size:cover;
+<tw-storydata name="Big Boy Pants" startnode="2" creator="Twine" creator-version="2.2.1" ifid="367D5C4B-D7FC-4606-B758-64044FDC5146" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-story {
+ color: black;
+  font-family: 'Quattrocento', serif;
+}
+tw-passage {
+    background-color: white;
+   opacity: 0.7;
+  padding: 1rem 1rem 1rem 1rem;
 }
 
 tw-story[tags~="interview"] {
  background-image:url("http://zagermanjordan.com/digm250/backgrounds/interview.png");
  background-size:cover;
 }
+
+tw-story[tags~="jen"] {
+ background-image:url("http://zagermanjordan.com/digm250/backgrounds/interview-jen.png");
+ background-size:cover;
+}
+
 
 tw-story[tags~="restaurant"] {
  background-image:url("http://zagermanjordan.com/digm250/backgrounds/restaurant.png");
@@ -18,7 +28,16 @@ tw-story[tags~="counter"] {
  background-image:url("http://zagermanjordan.com/digm250/backgrounds/counter.png");
  background-size:cover;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
+.example {
+  height: 100%;
+  width: 100%;
+
+      background-image: url("http://zagermanjordan.com/digm250/backgrounds/interview.png"), url("http://zagermanjordan.com/digm250/characters/jen.png");
+    background-position:  bottom, right;
+    background-repeat: no-repeat, no-repeat;
+    padding: 15px;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 </script><tw-passagedata pid="1" name="Interview Question" tags="" position="700,800" size="100,100">Jen: “Let’s start this interview, shall we? So... why do you want the job?” 
 
@@ -30,9 +49,13 @@ tw-story[tags~="counter"] {
 </tw-passagedata><tw-passagedata pid="2" name="START" tags="" position="700,0" size="100,100">Today is is your interview at the best fast food restaurant in the county: Big Boys! You had to beg your parents to let you apply, but finally you’re here to prove yourself as a capable employee. The smell of hamburgers and anticipation greets you as you step through the automatic front doors.
 
 
-[[Open the door]]</tw-passagedata><tw-passagedata pid="3" name="Open the door" tags="restaurant jen" position="700,200" size="100,100">An intimidating woman greets you from behind the counter, 
+[[Open the door]]
+</tw-passagedata><tw-passagedata pid="3" name="Open the door" tags="restaurant jen" position="700,200" size="100,100">
+An intimidating woman greets you from behind the counter, 
 
 “Welcome- oh, hey,  you look pretty nervous, kid. You must be the fresh meat I gotta interview today. Go ahead and pop a squat at one of the tables and I’ll be there in a sec’.”
+
+
 
 [[Continue-&gt;Pre-Interview Fly Question]]</tw-passagedata><tw-passagedata pid="4" name="Pre-Interview Fly Question" tags="interview jen" position="700,400" size="100,100">
 
@@ -42,15 +65,17 @@ You sit down at one of the dining room tables and look around the room as you wa
 
 [[Don&#39;t stare-&gt;Jen Knuckles Reaction]]
 
-[[Zip it for her-&gt;Creeped Out Jen, Interview Over]]</tw-passagedata><tw-passagedata pid="5" name="Jen Laughing Reaction" tags="" position="600,600" size="100,100">She looks down at her fly and she laughs, “Oh shit, thanks for telling me. My name is Jen, by the way. I’m the assistant manager here.” 
+[[Zip it for her-&gt;Creeped Out Jen, Interview Over]]</tw-passagedata><tw-passagedata pid="5" name="Jen Laughing Reaction" tags="interview" position="600,600" size="100,100">She looks down at her fly and she laughs, “Oh shit, thanks for telling me. My name is Jen, by the way. I’m the assistant manager here.” 
 
 *Jen zips her pants and she sits down in the booth across from you
 
-[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="6" name="Jen Knuckles Reaction" tags="" position="800,600" size="100,100">*She sits down in the booth across from you and she cracks her knuckles.
+[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="6" name="Jen Knuckles Reaction" tags="interview" position="800,600" size="100,100">*She sits down in the booth across from you and she cracks her knuckles.
 
 “Alright, kid, my name is Jen and I’m the assistant manager.”
 
-[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="7" name="Creeped Out Jen, Interview Over" tags="" position="200,500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="“For the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="925,1000" size="100,100">*Jen rolls her eyes.
+[[Continue-&gt;Interview Question]]</tw-passagedata><tw-passagedata pid="7" name="Creeped Out Jen, Interview Over" tags="" position="200,500" size="100,100">GAME OVER
+
+[[Restart-&gt;START]]</tw-passagedata><tw-passagedata pid="8" name="“For the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="925,1000" size="100,100">*Jen rolls her eyes.
 “We all want money, kid. Is there anything else?”
 
 [[“Well, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
@@ -74,14 +99,18 @@ You sit down at one of the dining room tables and look around the room as you wa
 [[“Actually, it&#39;s for the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
 
 [[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]
-</tw-passagedata><tw-passagedata pid="13" name="“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="game-over" position="200,1300" size="100,100">GAME OVER</tw-passagedata><tw-passagedata pid="14" name="“Actually, it&#39;s for the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="500,1200" size="100,100">*Jen rolls her eyes.
+</tw-passagedata><tw-passagedata pid="13" name="“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="game-over" position="200,1300" size="100,100">GAME OVER
+
+[[Restart-&gt;START]]</tw-passagedata><tw-passagedata pid="14" name="“Actually, it&#39;s for the money. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="500,1200" size="100,100">*Jen rolls her eyes.
 “We all want money, kid. Is there anything else?”
 
 [[“Honestly, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”]]
 
 [[“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”]]
 
-[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]</tw-passagedata><tw-passagedata pid="15" name="“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="1200,1300" size="100,100">GAME OVER</tw-passagedata><tw-passagedata pid="16" name="“Well, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="" position="900,1200" size="100,100">*Jen makes a gagging motion with her finger and tongue.
+[[“I want to eventually become assistant manager. My college resume would be dope with that on there!”]]</tw-passagedata><tw-passagedata pid="15" name="“Nope, like I said. I don’t want to be that one kid at my school without a job and cash- that’s lame.”" tags="" position="1200,1300" size="100,100">GAME OVER
+
+[[Restart-&gt;START]]</tw-passagedata><tw-passagedata pid="16" name="“Well, I believe in the Big Boy&#39;s Big Values, and I want to be able to share that with our community.”" tags="" position="900,1200" size="100,100">*Jen makes a gagging motion with her finger and tongue.
 
 “Try again, kid. That’s the oldest trick in the book and I’ve heard it a billion times from other little tykes like you.”
 
@@ -104,7 +133,7 @@ Jen: “Hey, grab a medium coke for me, will ya’?”
 
 *Jen finishes up talking with her friend and she walks him out to his car. As she leaves, another customer approaches the register.
 
-[[Continue-&gt;1st Customer]]</tw-passagedata><tw-passagedata pid="19" name="*You grab the bag of coke from your pocket. You’re not sure if she would consider this be a medium portion, but it’ll have to do!" tags="" position="1200,2000" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="20" name="1st Customer" tags="" position="700,2200" size="100,100">You manage to stutter a greeting to the customer before she goes through her order. It’s a struggle to keep up with her, but somehow you’re able to get everything down without too many questions. 
+[[Continue-&gt;1st Customer]]</tw-passagedata><tw-passagedata pid="19" name="*You grab the bag of coke from your pocket. You’re not sure if she would consider this be a medium portion, but it’ll have to do!" tags="" position="1200,2000" size="100,100">[[Restart-&gt;START]]</tw-passagedata><tw-passagedata pid="20" name="1st Customer" tags="" position="700,2200" size="100,100">You manage to stutter a greeting to the customer before she goes through her order. It’s a struggle to keep up with her, but somehow you’re able to get everything down without too many questions. 
 
 The time comes for the customer to pay, but you’re not sure how to process the transition. There seems to be three buttons you can choose from.
 
@@ -118,14 +147,32 @@ The time comes for the customer to pay, but you’re not sure how to process the
 *Jen walks back inside with a pager device in her hands.
 
 Jen: “You buzzed? What’s up?”
-</tw-passagedata><tw-passagedata pid="22" name="Second Button" tags="" position="900,2400" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="Third Button" tags="" position="700,2400" size="100,100">The third button causes the register to pop open.
+
+[[Explain]]</tw-passagedata><tw-passagedata pid="22" name="Second Button" tags="" position="900,2400" size="100,100">*Jen walks back inside and behind the counter before she notices the flashing light.
+
+Jen: “What did you do??? Oh shit- the emergency button! I gotta call ‘em...”
+
+*Jen reaches for the store phone that rests on the counter. After talking for a minute, she hangs up and she turns back to you.
+
+Jen: “You’re not making a good first impression, kid. Don’t go randomly pressing buttons!”
+
+[[Sorry Jen-&gt;Go to Jen]]</tw-passagedata><tw-passagedata pid="23" name="Third Button" tags="" position="700,2400" size="100,100">The third button causes the register to pop open.
 
 You pat yourself on the back for a second before you get an idea- what if you were to press one of the other buttons? What could possibly go wrong?
 
-[[Button-&gt;First Button Third]]
+[[Button-&gt;First Button]]
 
-[[Button-&gt;Second Button Third]]
+[[Button-&gt;Second Button]]
 
-[[Nah, it’s not worth the risk.]]</tw-passagedata><tw-passagedata pid="24" name="First Button Third" tags="" position="500,2600" size="100,100">*Jen walks back inside with a pager device in her hands.
+[[Nah, it’s not worth the risk.]]</tw-passagedata><tw-passagedata pid="24" name="Nah, it’s not worth the risk." tags="" position="700,2600" size="100,100">You finish the transaction and get the customer’s food without any more issues.
+Jen walks back into the store and behind the counter.
 
-Jen: “You buzzed? What’s up?”</tw-passagedata><tw-passagedata pid="25" name="Second Button Third" tags="" position="900,2600" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="26" name="Nah, it’s not worth the risk." tags="" position="700,2600" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+[[Go to Jen]]</tw-passagedata><tw-passagedata pid="25" name="Explain" tags="" position="500,2600" size="100,100">You explain the situation with the button confusion and she identifies each of them for you. After that you are able to finish the transaction and get the customer’s order without any more problems.
+
+[[Go to Jen]]</tw-passagedata><tw-passagedata pid="26" name="Go to Jen" tags="" position="700,2800" size="100,100">*Jen turns to you and she sighs.
+
+Jen: “I can’t keep you for much longer, kid. Technically you’re not in the system yet to work, so I gotta let you go home for now. I’ll call ya when that whole process is done. Cya later!”
+
+[[Level 2]]</tw-passagedata><tw-passagedata pid="27" name="Level 2" tags="" position="800,3000" size="100,100">COMING SOON
+
+[[Restart-&gt;START]] </tw-passagedata></tw-storydata>
